Runs, instructions on running, and ignores